# Prediction-Market-Arbitrage-Bot

./: .gitignore  CMakeLists.txt  account.txt
apps/: backtest_latency_sweep.cpp  binance_logger.cpp  binance_ws_probe.cpp  live_pipeline.cpp  live_trader.cpp  paper_trader.cpp  polymarket_logger.cpp  polymarket_quote_probe.cpp  replay_align.cpp  signal_smoke.cpp
configs/: example.json
include/binance/: stream_client.hpp  stream_env.hpp
include/core/: clock.hpp  thread_pool.hpp  types.hpp
include/execution/: executor.hpp
include/logging/: jsonl_writer.hpp
include/polymarket/: bucket_market_discovery.hpp  gamma_bootstrap.hpp  poly_ws_quote_feed.hpp  polymarket_types.hpp  rest_quote.hpp  ws_fixed_token_feed.hpp  ws_market_client.hpp
include/replay/: timeline_merge.hpp
include/signals/: engine.hpp
include/sim/: latency_backtest.hpp
include/telemetry/: pipeline.hpp
src/binance/: stream_client.cpp  stream_env.cpp
src/core/: thread_pool.cpp
src/execution/: live_executor.cpp  paper_executor.cpp
src/logging/: jsonl_writer.cpp
src/polymarket/: bucket_market_discovery.cpp  gamma_bootstrap.cpp  poly_ws_quote_feed.cpp  rest_quote.cpp  ws_fixed_token_feed.cpp  ws_market_client.cpp
src/replay/: timeline_merge.cpp
src/signals/: engine.cpp
src/sim/: latency_backtest.cpp
src/telemetry/: pipeline.cpp
